# lib99ocl

./: .gitignore  CMakeLists.txt
exposed/: lineshapes.ocl
lib99ocl/: complex.c  constants.h  core.c  core.h  lineshapes.c  special.c
lib99ocl/cspecial/: cerf.c
lib99ocl/poly/: eval.c  eval.h
lib99ocl/special/: gamma.c  gamma.h  hyp2f1.c  psi.c  psi.h
